[project]
name = "cachebot"
version = "0.1.0"
description = "Telegram P2P deals bot with Crypto Pay integration"
authors = [{ name = "CacheBot" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.5",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "qrcode[pil]>=7.4",
    "pillow>=10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
